--- a/assets/stylesheets/partials/_typography.scss
+++ b/assets/stylesheets/partials/_typography.scss
@@ -3,19 +3,19 @@
 /* ------------------ */
 @font-face {
   font-family: nunito;
-  src: url("../vendor/nunito/Nunito-Bold.ttf");
+  src: url("vendor/nunito/Nunito-Bold.ttf");
   font-weight: bold;
 }
 
 @font-face {
   font-family: nunito;
-  src: url("../vendor/nunito/Nunito-Light.ttf");
+  src: url("vendor/nunito/Nunito-Light.ttf");
   font-weight: 100;
 }
 
 @font-face {
   font-family: nunito;
-  src: url("../vendor/nunito/Nunito-Regular.ttf");
+  src: url("vendor/nunito/Nunito-Regular.ttf");
   font-weight: normal;
 }
 
@@ -24,37 +24,37 @@
 /* --------------- */
 @font-face {
   font-family: open-sans;
-  src: url("../vendor/opensans/OpenSans-Bold.ttf");
+  src: url("vendor/opensans/OpenSans-Bold.ttf");
   font-weight: bold;
 }
 
 @font-face {
   font-family: open-sans;
-  src: url("../vendor/opensans/OpenSans-BoldItalic.ttf");
+  src: url("vendor/opensans/OpenSans-BoldItalic.ttf");
   font-weight: bold;
   font-style: italic;
 }
 
 @font-face {
   font-family: open-sans;
-  src: url("../vendor/opensans/OpenSans-Italic.ttf");
+  src: url("vendor/opensans/OpenSans-Italic.ttf");
   font-style: italic;
 }
 
 @font-face {
   font-family: open-sans;
-  src: url("../vendor/opensans/OpenSans-Regular.ttf");
+  src: url("vendor/opensans/OpenSans-Regular.ttf");
   font-weight: normal;
 }
 
 @font-face {
   font-family: open-sans;
-  src: url("../vendor/opensans/OpenSans-Light.ttf");
+  src: url("vendor/opensans/OpenSans-Light.ttf");
   font-weight: 100;
 }
 
 /* --------------- */
 /* Font Variables  */
 /* --------------- */
-$heading-font: nunito;
-$body-font: open-sans;
+$heading-font: 'open-sans';
+$body-font: 'nunito';
