--- a/assets/stylesheets/partials/_reset.scss
+++ b/assets/stylesheets/partials/_reset.scss
@@ -1,3 +1,7 @@
+/* ----------------- */
+/* -- BASIC SETUP -- */
+/* ----------------- */
+
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +14,20 @@ html {
   font-family: $body-font;
   font-weight: 300;
   font-size: 62.5%;
+  line-height: 1;
   text-rendering: optimizeLegibility;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  border: 0;
+  box-sizing: content-box;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 .clearfix {zoom: 1}
@@ -22,3 +39,54 @@ html {
   visibility: hidden;
 }
 
+section {
+  padding: 80px 0;
+  display: block;
+}
+
+strong {
+  font-weight: bold;
+}
+
+.box {
+  padding: 1%;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+h1 {
+  margin: 0;
+  margin-bottom: 20px;
+  color: $primary-text-color;
+  font-size: 300%;
+  word-spacing: 4px;
+  letter-spacing: 1px;
+}
+
+h2 {
+  font-size: 200%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+}
+
+h3 {
+  font-size: 135%;
+  margin-bottom: 14px;
+}
+
+h2:after {
+  display: block;
+  height: 2px;
+  background-color: $secondary-text-color;
+  content: "";
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 100px;
+}
