--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,6 +1,7 @@
-/* --------------------- */
-/*  Reusable components  */
-/* --------------------- */
+.container {
+  max-width: 1140px;
+  margin: 0 auto; }
+
 /* ------------------ */
 /* Heading typography */
 /* ------------------ */
@@ -40,13 +41,93 @@
   font-family: open-sans;
   src: url("vendor/opensans/OpenSans-Light.ttf");
   font-weight: 100; }
-/* --------------- */
-/* Font Variables  */
-/* --------------- */
-p {
-  font-family: "nunito"; }
+/* ----------------- */
+/* -- BASIC SETUP -- */
+/* ----------------- */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
-.body-text {
-  font-family: "open-sans"; }
+html {
+  background-color: #0288D1;
+  color: #757575;
+  font-family: "nunito";
+  font-weight: 300;
+  font-size: 62.5%;
+  line-height: 1;
+  text-rendering: optimizeLegibility; }
 
-/*# sourceMappingURL=main.css.map */
+img {
+  max-width: 100%;
+  height: auto;
+  border: 0;
+  box-sizing: content-box; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+.clearfix {
+  zoom: 1; }
+
+.clearfix:after {
+  content: '.';
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden; }
+
+section {
+  padding: 80px 0;
+  display: block; }
+
+strong {
+  font-weight: bold; }
+
+.box {
+  padding: 1%; }
+
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  text-transform: uppercase; }
+
+h1 {
+  margin: 0;
+  margin-bottom: 20px;
+  color: #212121;
+  font-size: 300%;
+  word-spacing: 4px;
+  letter-spacing: 1px; }
+
+h2 {
+  font-size: 200%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px; }
+
+h3 {
+  font-size: 135%;
+  margin-bottom: 14px; }
+
+h2:after {
+  display: block;
+  height: 2px;
+  background-color: #757575;
+  content: "";
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 100px; }
+
+header {
+  background: #03A9F4;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #03A9F4, #0288D1);
+  background: linear-gradient(to left, #03A9F4, #0288D1);
+  background-attachment: fixed;
+  height: 100vh; }
+
+/*# sourceMappingURL=styles.css.map */
