--- a/assets/stylesheets/partials/_typography.scss
+++ b/assets/stylesheets/partials/_typography.scss
@@ -16,7 +16,7 @@
 @font-face {
   font-family: nunito;
   src: url("vendor/nunito/Nunito-Regular.ttf");
-  font-weight: normal;
+  font-weight: 300;
 }
 
 /* --------------- */
@@ -44,7 +44,7 @@
 @font-face {
   font-family: open-sans;
   src: url("vendor/opensans/OpenSans-Regular.ttf");
-  font-weight: normal;
+  font-weight: 300;
 }
 
 @font-face {
