--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -16,7 +16,7 @@
 @font-face {
   font-family: nunito;
   src: url("vendor/nunito/Nunito-Regular.ttf");
-  font-weight: normal; }
+  font-weight: 300; }
 /* --------------- */
 /* Body Typography */
 /* --------------- */
@@ -36,7 +36,7 @@
 @font-face {
   font-family: open-sans;
   src: url("vendor/opensans/OpenSans-Regular.ttf");
-  font-weight: normal; }
+  font-weight: 300; }
 @font-face {
   font-family: open-sans;
   src: url("vendor/opensans/OpenSans-Light.ttf");
@@ -91,13 +91,13 @@ strong {
 h1,
 h2,
 h3 {
+  color: #212121;
   font-weight: 300;
   text-transform: uppercase; }
 
 h1 {
   margin: 0;
   margin-bottom: 20px;
-  color: #212121;
   font-size: 300%;
   word-spacing: 4px;
   letter-spacing: 1px; }
@@ -113,18 +113,10 @@ h3 {
   font-size: 135%;
   margin-bottom: 14px; }
 
-h2:after {
-  display: block;
-  height: 2px;
-  background-color: #757575;
-  content: "";
-  margin: 0 auto;
-  margin-top: 30px;
-  width: 100px; }
-
 header {
   background: #03A9F4;
   /* fallback for old browsers */
+  text-align: center;
   background: -webkit-linear-gradient(to left, #03A9F4, #0288D1);
   background: linear-gradient(to left, #03A9F4, #0288D1);
   background-attachment: fixed;
