Reconfigured reset and added content

--- a/assets/stylesheets/partials/_reset.scss
+++ b/assets/stylesheets/partials/_reset.scss
@@ -10,11 +10,11 @@
 
 html {
   background-color: $primary-color-dark;
-  color: $secondary-text-color;
-  font-family: $body-font;
   font-weight: 300;
   font-size: 62.5%;
   line-height: 1;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
 }
 
@@ -23,6 +23,14 @@ img {
   height: auto;
   border: 0;
   box-sizing: content-box;
+}
+
+body {
+  color: $secondary-text-color;
+  vertical-align: baseline;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
 }
 
 table {
@@ -79,4 +87,39 @@ h2 {
 h3 {
   font-size: 135%;
   margin-bottom: 14px;
+}
+
+/* --------------------------------- */
+/*          FORM DEFINITIONS         */ 
+/* --------------------------------- */
+
+%std-click-style {
+  color: inherit;
+  transition: .3s;
+}
+
+a {
+  @extend %std-click-style;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+button {
+  @extend %std-click-style;
+  overflow: visible;
+  border: 0;
+  font: inherit;
+  -webkit-font-smoothing: inherit;
+  letter-spacing: inherit;
+  background: none;
+  cursor: pointer;
+}
+
+::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+:focus {
+  outline: 0;
 }
