--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -41,111 +41,100 @@
   font-family: open-sans;
   src: url("vendor/opensans/OpenSans-Light.ttf");
   font-weight: 100; }
-/* ----------------- */
-/* -- BASIC SETUP -- */
-/* ----------------- */
+/* Small setup adjustments */
+/* ---Reynaldo Salcedo---- */
+/* ----------------------- */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
 
-html {
-  background-color: #0288D1;
-  font-weight: 300;
-  font-size: 62.5%;
-  line-height: 1;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  text-rendering: optimizeLegibility; }
-
-img {
-  max-width: 100%;
-  height: auto;
-  border: 0;
-  box-sizing: content-box; }
-
-body {
-  color: #757575;
-  vertical-align: baseline;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
 .clearfix {
   zoom: 1; }
 
 .clearfix:after {
-  content: '.';
+  content: ".";
   clear: both;
   display: block;
   height: 0;
   visibility: hidden; }
 
-section {
-  padding: 80px 0;
+/* http://meyerweb.com/eric/tools/css/reset/
+ * v2.0 | 20110126
+ * License: none (public domain) */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  border: 0;
+  font-family: "nunito", "Arial", sans-serif;
+  font-weight: 300;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  text-rendering: optimizeLegibility; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
   display: block; }
 
-strong {
-  font-weight: bold; }
+body {
+  line-height: 1; }
 
-.box {
-  padding: 1%; }
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+p,
+li {
+  color: #555;
+  font-size: 125%; }
 
 h1,
 h2,
 h3 {
-  color: #212121;
   font-weight: 300;
   text-transform: uppercase; }
 
 h1 {
-  margin: 0;
+  font-size: 300%;
+  font-color: #212121;
+  font-family: "open-sans", "Arial", sans-serif;
   margin-bottom: 20px;
-  font-size: 350%;
   word-spacing: 4px;
   letter-spacing: 1px; }
 
 h2 {
-  font-size: 280%;
+  font-size: 200%;
   word-spacing: 2px;
   text-align: center;
   margin-bottom: 30px;
   letter-spacing: 1px; }
 
 h3 {
-  font-size: 175%;
+  font-size: 135%;
   margin-bottom: 14px; }
-
-/* --------------------------------- */
-/*          FORM DEFINITIONS         */
-/* --------------------------------- */
-a, button {
-  color: inherit;
-  transition: .3s; }
-
-a {
-  text-decoration: none;
-  background-color: transparent; }
-
-button {
-  overflow: visible;
-  border: 0;
-  font: inherit;
-  -webkit-font-smoothing: inherit;
-  letter-spacing: inherit;
-  background: none;
-  cursor: pointer; }
-
-::-moz-focus-inner {
-  padding: 0;
-  border: 0; }
-
-:focus {
-  outline: 0; }
 
 header {
   background: #03A9F4;
