--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -6,3 +6,12 @@ header {
   background-attachment: fixed;
   height: 100vh;
 }
+
+.mast-head ul{
+  position: absolute;
+  bottom: 0;
+}
+.mast-head li {
+  text-transform: uppercase;
+  font-size: 155%;
+}
