--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -14,8 +14,15 @@ header {
   position: absolute;
   bottom: 0;
 }
-nav .logo {
+.mast-head .logo {
+  margin-top: 15px;
 }
+.mast-head nav .logo {
+  margin: 0;
+  width: 50%;
+  display: inline;
+}
+
 .mast-head li {
   text-transform: uppercase;
   font-size: 155%;
