--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -1,3 +1,6 @@
+/* ---------- */
+/* - HEADER - */
+/* ---------- */
 header {
   background: $primary-color; /* fallback for old browsers */
   text-align: center;
@@ -18,12 +21,34 @@ header {
   margin-top: 15px;
 }
 .mast-head nav .logo {
+  display: none;
+}
+
+.active-logo {
   margin: 0;
   width: 50%;
   display: inline;
 }
 
-.mast-head li {
+.mast-head li a {
+  text-decoration: none;
   text-transform: uppercase;
   font-size: 155%;
+  transition: border-bottom .2s, color .2s;
+}
+/* --------- */
+/* - LINKS - */
+/* --------- */
+
+a:link,
+a:visited {
+  color: $secondary-text-color;
+  transition: color .2s, border-bottom .2s;
+}
+
+a:hover,
+a:active,
+.selected {
+  color: $primary-color-text;
+  border-bottom: 2px solid $primary-color-text;
 }
