--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -3,23 +3,27 @@
 /* ---------- */
 header {
   background: $primary-color; /* fallback for old browsers */
-  text-align: center;
   background: -webkit-linear-gradient(to left, $primary-color, $primary-color-dark);
   background: linear-gradient(to left, $primary-color, $primary-color-dark);
   background-attachment: fixed;
   height: 100vh;
 }
 
-.mast-head {
-  position: relative;
+h1 {
+  margin-top: 40px;
 }
-.mast-head ul{
-  position: absolute;
-  bottom: 0;
+
+h2.i-am {
+  margin-top: 12%;
 }
-.mast-head .logo {
-  margin-top: 15px;
+/* ---------- */
+/* -- LOGO -- */
+/* ---------- */
+
+.mast-head a .logo {
+  margin-top: 25px;
 }
+
 .mast-head nav .logo {
   display: none;
 }
@@ -30,24 +34,34 @@ header {
   display: inline;
 }
 
+/* ---------- */
+/* -- NAV --- */
+/* ---------- */
+.main-nav {
+  position: absolute;
+  bottom: 0;
+}
+
+nav.main-nav {
+  margin-bottom: 4em;
+}
+
+/* ---------- */
+/* --LINKS -- */
+/* ---------- */
 .mast-head li a {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 155%;
   transition: border-bottom .2s, color .2s;
 }
-/* --------- */
-/* - LINKS - */
-/* --------- */
-
-a:link,
-a:visited {
+.main-nav a:link,
+.main-nav a:visited {
   color: $secondary-text-color;
   transition: color .2s, border-bottom .2s;
 }
-
-a:hover,
-a:active,
+.main-nav a:hover,
+.main-nav a:active,
 .selected {
   color: $primary-color-text;
   border-bottom: 2px solid $primary-color-text;
