--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -142,21 +142,22 @@ h3 {
 header {
   background: #03A9F4;
   /* fallback for old browsers */
-  text-align: center;
   background: -webkit-linear-gradient(to left, #03A9F4, #0288D1);
   background: linear-gradient(to left, #03A9F4, #0288D1);
   background-attachment: fixed;
   height: 100vh; }
 
-.mast-head {
-  position: relative; }
+h1 {
+  margin-top: 40px; }
 
-.mast-head ul {
-  position: absolute;
-  bottom: 0; }
+h2.i-am {
+  margin-top: 12%; }
 
-.mast-head .logo {
-  margin-top: 15px; }
+/* ---------- */
+/* -- LOGO -- */
+/* ---------- */
+.mast-head a .logo {
+  margin-top: 25px; }
 
 .mast-head nav .logo {
   display: none; }
@@ -166,22 +167,32 @@ header {
   width: 50%;
   display: inline; }
 
+/* ---------- */
+/* -- NAV --- */
+/* ---------- */
+.main-nav {
+  position: absolute;
+  bottom: 0; }
+
+nav.main-nav {
+  margin-bottom: 4em; }
+
+/* ---------- */
+/* --LINKS -- */
+/* ---------- */
 .mast-head li a {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 155%;
   transition: border-bottom .2s, color .2s; }
 
-/* --------- */
-/* - LINKS - */
-/* --------- */
-a:link,
-a:visited {
+.main-nav a:link,
+.main-nav a:visited {
   color: #555;
   transition: color .2s, border-bottom .2s; }
 
-a:hover,
-a:active,
+.main-nav a:hover,
+.main-nav a:active,
 .selected {
   color: #FFFFFF;
   border-bottom: 2px solid #FFFFFF; }
