Added styles to sidebar

--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -76,7 +76,7 @@ nav.main-nav {
 /* - Sidebar-button - */
 /* ------------------ */
 .btn.btn-side {
-  color: $primary-text-color;
+  color: $secondary-text-color;
   font-size: 100%;
   background-color: $accent-color;
   position: absolute;
