--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -3,6 +3,8 @@
 /* ---------- */
 header {
   background: $primary-color; /* fallback for old browsers */
+  font-family: $body-font;
+  font-weight: 300;
   text-align: center;
   background: -webkit-linear-gradient(to left, $primary-color, $primary-color-dark);
   background: linear-gradient(to left, $primary-color, $primary-color-dark);
@@ -12,7 +14,6 @@ header {
 
 h1 {
   margin-top: 40px;
-  text-shadow: 1px 1px $accent-color;
 }
 
 h2.i-am {
