--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -142,6 +142,8 @@ h3 {
 header {
   background: #03A9F4;
   /* fallback for old browsers */
+  font-family: "nunito";
+  font-weight: 300;
   text-align: center;
   background: -webkit-linear-gradient(to left, #03A9F4, #0288D1);
   background: linear-gradient(to left, #03A9F4, #0288D1);
@@ -149,8 +151,7 @@ header {
   height: 100vh; }
 
 h1 {
-  margin-top: 40px;
-  text-shadow: 1px 1px #FFEB3B; }
+  margin-top: 40px; }
 
 h2.i-am {
   margin-top: 12%; }
@@ -233,6 +234,13 @@ aside > h2 {
 
 .sidebar input[type="text"] {
   width: 80%;
-  height: 2em; }
+  height: 2em;
+  text-align: center; }
+
+.sidebar input[type="text"],
+.sidebar textarea {
+  font-family: "nunito";
+  font-size: 120%;
+  padding: 15px; }
 
 /*# sourceMappingURL=styles.css.map */
