Qualities display developed

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -216,7 +216,8 @@ nav.main-nav {
 aside {
   background-color: #FFEB3B;
   height: 100vh;
-  text-align: center; }
+  text-align: center;
+  display: none; }
 
 aside > h2 {
   font-weight: bold; }
