Added styles to qualitie

--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -19,6 +19,15 @@ h1 {
 h2.i-am {
   margin-top: 12%;
 }
+
+// Qualities Displayed
+.attr {
+  font-size: 120%;
+  font-family: $heading-font;
+  color: $accent-color;
+  font-weight: bold;
+}
+
 /* ---------- */
 /* -- LOGO -- */
 /* ---------- */
