Added animations and interactions for skills

--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -8,12 +8,14 @@ header {
   text-align: center;
   background: -webkit-linear-gradient(to left, $primary-color, $primary-color-dark);
   background: linear-gradient(to left, $primary-color, $primary-color-dark);
-  background-attachment: fixed;
   height: 100vh;
+  margin-bottom: 20px;
 }
 
 h1 {
   margin-top: 40px;
+  color: $primary-text-color;
+  font-weight: 300;
 }
 
 h2.i-am {
