--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -89,7 +89,8 @@ footer, header, hgroup, menu, nav, section {
   display: block; }
 
 body {
-  line-height: 1; }
+  line-height: 1;
+  background-color: #BDBDBD; }
 
 ol, ul {
   list-style: none; }
@@ -147,11 +148,13 @@ header {
   text-align: center;
   background: -webkit-linear-gradient(to left, #03A9F4, #0288D1);
   background: linear-gradient(to left, #03A9F4, #0288D1);
-  background-attachment: fixed;
-  height: 100vh; }
+  height: 100vh;
+  margin-bottom: 20px; }
 
 h1 {
-  margin-top: 40px; }
+  margin-top: 40px;
+  color: #212121;
+  font-weight: 300; }
 
 h2.i-am {
   margin-top: 12%; }
@@ -249,5 +252,30 @@ aside > h2 {
   font-family: "nunito";
   font-size: 120%;
   padding: 15px; }
+
+section.skills {
+  background-color: #0288D1; }
+
+section.skills h2 {
+  font-family: "open-sans";
+  color: #212121;
+  font-weight: bold; }
+
+.box,
+.box img {
+  background-color: #FFEB3B;
+  text-align: center;
+  border-radius: 2.5em;
+  font-size: 120%;
+  font-family: "nunito";
+  display: inline-block;
+  margin-top: 25px; }
+
+img.ski-ninja {
+  opacity: .2;
+  transition: opacity .4s; }
+
+img.ski-ninja:hover {
+  opacity: 1; }
 
 /*# sourceMappingURL=styles.css.map */
