Changed text color for box elements

--- a/assets/stylesheets/partials/_skills.scss
+++ b/assets/stylesheets/partials/_skills.scss
@@ -11,6 +11,7 @@ section.skills h2{
 .box,
 .box img {
   background-color: $accent-color;
+  color: $secondary-text-color;
   text-align: center;
   border-radius: 2.5em;
   font-size: 120%;
