--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -264,6 +264,7 @@ section.skills h2 {
 .box,
 .box img {
   background-color: #FFEB3B;
+  color: #555;
   text-align: center;
   border-radius: 2.5em;
   font-size: 120%;
