Changed background color

--- a/assets/stylesheets/partials/_skills.scss
+++ b/assets/stylesheets/partials/_skills.scss
@@ -1,5 +1,5 @@
 section.skills {
-  background-color: $primary-color-dark;
+  background-color: $primary-color;
 }
 
 section.skills h2{
@@ -21,7 +21,7 @@ section.skills h2{
 }
 
 img.ski-ninja {
-  opacity: .2;
+  opacity: .1;
   transition: opacity .4s;
 }
 
