Added colors to section portfolio

--- a/assets/stylesheets/partials/_reset.sass
+++ b/assets/stylesheets/partials/_reset.sass
@@ -58,7 +58,7 @@ footer, header, hgroup, menu, nav, section
 
 body
   line-height: 1
-  background-color: $divider-color
+  background-color: $primary-color
 
 ol, ul
   list-style: none
@@ -97,6 +97,14 @@ h2
   text-align: center
   margin-bottom: 30px
   letter-spacing: 1px
+  font-family: $heading-font
+  color: $primary-color-text
+  font-weight: bold
+
 h3
   font-size: 135%
   margin-bottom: 14px
+section
+  margin-bottom: 20px
+  display: inline-block
+  width: 100%
