--- a/assets/stylesheets/partials/_skills.scss
+++ b/assets/stylesheets/partials/_skills.scss
@@ -1,11 +1,6 @@
 section.skills {
   background-color: $primary-color;
-}
-
-section.skills h2{
-  font-family: $heading-font;
-  color: $primary-text-color;
-  font-weight: bold;
+  margin-bottom: 30px
 }
 
 .box,
