Added new color to collection

--- a/assets/stylesheets/modules/_colors.scss
+++ b/assets/stylesheets/modules/_colors.scss
@@ -1,6 +1,6 @@
 $primary-color-dark: #0288D1;
 $primary-color: #03A9F4;
-$primary-color-section: #0389DA;
+$primary-color-section: #08B9F9;
 $primary-color-light: #B3E5FC;
 $primary-color-text: #FFFFFF;
 $accent-color: #FFEB3B;
