--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -297,7 +297,7 @@ img.ski-ninja:hover {
   opacity: 1; }
 
 section.portfolio {
-  background-color: #0389DA; }
+  background-color: #08B9F9; }
 
 .portfolio h2 {
   margin-top: 30px; }
