Repaired float problems

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -302,4 +302,8 @@ section.portfolio {
 .portfolio h2 {
   margin-top: 30px; }
 
+.portfolio .box:nth-child(even) {
+  clear: both;
+  float: right; }
+
 /*# sourceMappingURL=styles.css.map */
