--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -302,13 +302,9 @@ section.portfolio {
 .portfolio h2 {
   margin-top: 30px; }
 
-#dialog {
-  margin: 0;
-  clear: both;
-  background-color: red; }
-
 .portfolio .box:nth-child(even) {
   clear: both;
-  float: right; }
+  float: right;
+  margin-bottom: 20px; }
 
 /*# sourceMappingURL=styles.css.map */
