--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -304,8 +304,10 @@ section.portfolio {
 
 .portfolio .box:nth-child(even) {
   clear: both;
-  float: right;
-  margin-bottom: 20px; }
+  float: right; }
+
+.portfolio .box:last-child {
+  margin-bottom: 45px; }
 
 footer {
   background-color: #03A9F4;
