Added waypoints to nav

--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -38,12 +38,12 @@ h2.i-am {
   margin-top: 25px;
 }
 
-.mast-head nav .logo {
+.mast-head nav .unactive-logo {
   display: none;
 }
 
 .active-logo {
-  margin: 0;
+  margin: 0 !important;
   width: 50%;
   display: inline;
 }
